--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -107,7 +107,7 @@
       font-size: 16px;
       font-weight: 600; }
   .article.article-style-b .article-details p {
-    color: #34395e; }
+    color: #37333b; }
   .article.article-style-b .article-details .article-cta {
     text-align: right; }
   .article.article-style-c .article-header {
@@ -116,10 +116,10 @@
     text-transform: uppercase;
     margin-bottom: 5px;
     letter-spacing: 1px;
-    color: #34395e; }
+    color: #37333b; }
     .article.article-style-c .article-details .article-category a {
       font-size: 10px;
-      color: #34395e;
+      color: #37333b;
       font-weight: 700; }
   .article.article-style-c .article-details .article-title {
     margin-bottom: 10px; }
@@ -129,7 +129,7 @@
       font-size: 16px;
       font-weight: 600; }
   .article.article-style-c .article-details p {
-    color: #34395e; }
+    color: #37333b; }
   .article.article-style-c .article-user {
     display: inline-block;
     width: 100%;
@@ -190,7 +190,7 @@
   font-weight: 600;
   letter-spacing: .5px;
   font-size: 12px;
-  color: #34395e; }
+  color: #37333b; }
 
 .author-box .author-box-description {
   line-height: 26px;
@@ -258,7 +258,7 @@
       text-align: right; }
       .chat-box .chat-content .chat-item.chat-right .chat-details .chat-text {
         text-align: left;
-        background-color: #6777ef;
+        background-color: #60C8D0;
         color: #fff; }
     .chat-box .chat-content .chat-item > img {
       float: left;
@@ -371,21 +371,21 @@ div.dataTables_wrapper div.dataTables_processing {
   font-size: 12px; }
 
 .ranges li {
-  color: #6777ef; }
+  color: #60C8D0; }
   .ranges li:hover, .ranges li.active {
-    background-color: #6777ef; }
+    background-color: #60C8D0; }
 
 .daterangepicker td.active, .daterangepicker td.active:hover {
-  background-color: #6777ef; }
+  background-color: #60C8D0; }
 
 /* 1.10 Dropzone */
 .dropzone {
-  border: 2px dashed #6777ef;
+  border: 2px dashed #60C8D0;
   min-height: 240px;
   text-align: center; }
   .dropzone .dz-message {
     font-size: 24px;
-    color: #34395e;
+    color: #37333b;
     margin: 3.4em; }
   .dropzone .dz-preview .dz-details {
     padding: 2.2em 1em; }
@@ -416,7 +416,7 @@ div.dataTables_wrapper div.dataTables_processing {
 
 .fc-view {
   border-color: #f2f2f2;
-  color: #34395e !important;
+  color: #37333b !important;
   font-weight: 500;
   padding: 10px; }
   .fc-view > table {
@@ -425,7 +425,7 @@ div.dataTables_wrapper div.dataTables_processing {
       border-color: #f2f2f2; }
     .fc-view > table th {
       border-color: #f2f2f2;
-      color: #34395e !important;
+      color: #37333b !important;
       font-weight: 500;
       padding: 10px; }
 
@@ -470,7 +470,7 @@ tr:first-child > td > .fc-day-grid-event {
   text-shadow: none;
   border-radius: 0; }
   .fc button.fc-state-active {
-    background-color: #6777ef;
+    background-color: #60C8D0;
     color: #fff; }
 
 /* 1.13 Gallery */
@@ -613,7 +613,7 @@ tr:first-child > td > .fc-day-grid-event {
   width: 13px;
   height: 13px;
   background-color: #fff;
-  border: 3px solid #6777ef;
+  border: 3px solid #60C8D0;
   border-radius: 50%; }
 
 .jqvmap-label {
@@ -659,7 +659,7 @@ tr:first-child > td > .fc-day-grid-event {
         font-weight: 600;
         font-size: 12px;
         letter-spacing: .5px;
-        color: #34395e; }
+        color: #37333b; }
       .profile-widget .profile-widget-items .profile-widget-item .profile-widget-item-value {
         color: #000;
         font-weight: 600;
@@ -700,19 +700,19 @@ tr:first-child > td > .fc-day-grid-event {
   border-color: #e4e6fc; }
 
 .select2-dropdown {
-  border-color: #e4e6fc !important; }
+  border-color: #caedef !important; }
 
 .select2-container.select2-container--open .select2-selection--multiple {
   background-color: #fefeff;
-  border-color: #95a0f4; }
+  border-color: #60C8D0; }
 
 .select2-container.select2-container--focus .select2-selection--multiple, .select2-container.select2-container--focus .select2-selection--single {
   background-color: #fefeff;
-  border-color: #95a0f4; }
+  border-color: #60C8D0; }
 
 .select2-container.select2-container--open .select2-selection--single {
   background-color: #fefeff;
-  border-color: #95a0f4; }
+  border-color: #60C8D0; }
 
 .select2-results__option {
   padding: 10px; }
@@ -750,7 +750,7 @@ tr:first-child > td > .fc-day-grid-event {
 .select2-container--default .select2-selection--multiple .select2-selection__choice,
 .select2-container--default .select2-results__option[aria-selected=true],
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #6777ef;
+  background-color: #60C8D0;
   color: #fff; }
 
 .select2-results__option {
@@ -769,7 +769,7 @@ tr:first-child > td > .fc-day-grid-event {
     border-color: #e4e6fc; }
   .selectric:focus {
     background-color: #fefeff;
-    border-color: #95a0f4; }
+    border-color: #60C8D0; }
   .selectric .label {
     font-size: 13px;
     background-color: transparent;
@@ -781,7 +781,7 @@ tr:first-child > td > .fc-day-grid-event {
     min-height: 42px; }
 
 .selectric-open .selectric {
-  border-color: #6777ef; }
+  border-color: #60C8D0; }
 
 .selectric-above .selectric-items, .selectric-below .selectric-items {
   margin-bottom: 10px; }
@@ -797,7 +797,7 @@ tr:first-child > td > .fc-day-grid-event {
     .selectric-items li:hover {
       background-color: #f2f2f2; }
     .selectric-items li.selected, .selectric-items li.highlighted {
-      background-color: #6777ef;
+      background-color: #60C8D0;
       color: #fff; }
 
 /* 1.20 Slider */
@@ -865,7 +865,7 @@ tr:first-child > td > .fc-day-grid-event {
     .statistic-details .statistic-details-item .detail-name {
       font-size: 12px;
       margin-top: 5px;
-      color: #34395e;
+      color: #37333b;
       letter-spacing: .3px; }
     .statistic-details .statistic-details-item .detail-value {
       font-size: 18px;
@@ -923,8 +923,8 @@ tr:first-child > td > .fc-day-grid-event {
   .swal-button:focus {
     box-shadow: none; }
   .swal-button.swal-button--confirm {
-    box-shadow: 0 2px 6px #acb5f6;
-    background-color: #6777ef; }
+    box-shadow: 0 2px 6px #9bdce1;
+    background-color: #60C8D0; }
     .swal-button.swal-button--confirm:focus {
       opacity: .8; }
 
@@ -948,14 +948,14 @@ tr:first-child > td > .fc-day-grid-event {
     height: 100%;
     padding: 0 8px; }
   .bootstrap-tagsinput .tag {
-    background-color: #6777ef;
+    background-color: #60C8D0;
     border-radius: 3px;
     padding: 5px 10px; }
     .bootstrap-tagsinput .tag:first-child {
       margin-left: 5px; }
   .bootstrap-tagsinput:focus {
     background-color: #fefeff;
-    border-color: #95a0f4; }
+    border-color: #60C8D0; }
 
 /* 1.27 Time Picker */
 .bootstrap-timepicker-widget table td a span {
@@ -998,7 +998,7 @@ tr:first-child > td > .fc-day-grid-event {
   background-color: #ffa426; }
 
 .toast.toast-success {
-  background-color: #47c363; }
+  background-color: #63ed7a; }
 
 .toast.toast-info {
   background-color: #fff; }
@@ -1073,7 +1073,7 @@ tr:first-child > td > .fc-day-grid-event {
     line-height: 56px; }
   .weather .weather-desc .weather-text {
     font-size: 12px;
-    color: #34395e;
+    color: #37333b;
     font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -1088,10 +1088,10 @@ tr:first-child > td > .fc-day-grid-event {
   padding: 10px;
   line-height: 1;
   border-radius: 3px;
-  border: 2px solid #6777ef;
+  border: 2px solid #60C8D0;
   font-size: 10px;
   font-weight: 500;
-  color: #6777ef;
+  color: #60C8D0;
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-bottom: 10px; }
@@ -1122,7 +1122,7 @@ tr:first-child > td > .fc-day-grid-event {
   .icon-wrap .icon_unicode {
     width: 100%;
     padding-left: 45px;
-    color: #34395e; }
+    color: #37333b; }
 
 .new-icons ul {
   padding: 0;
@@ -1190,7 +1190,7 @@ tr:first-child > td > .fc-day-grid-event {
     border-radius: 3px;
     margin-bottom: 10px; }
   .product-item .product-name {
-    color: #34395e;
+    color: #37333b;
     font-weight: 700;
     margin-bottom: 3px; }
   .product-item .product-review {
@@ -1222,7 +1222,7 @@ tr:first-child > td > .fc-day-grid-event {
     display: flex;
     font-size: 12px;
     font-weight: 500;
-    color: #34395e;
+    color: #37333b;
     letter-spacing: .5px; }
     .tickets-list .ticket-item .ticket-info .bullet {
       margin: 0 10px; }
@@ -1242,11 +1242,11 @@ tr:first-child > td > .fc-day-grid-event {
       .tickets .ticket-items .ticket-item:hover {
         background-color: rgba(63, 82, 227, 0.03); }
         .tickets .ticket-items .ticket-item:hover .ticket-title {
-          color: #6777ef; }
+          color: #60C8D0; }
       .tickets .ticket-items .ticket-item.active {
-        box-shadow: 0 2px 6px #acb5f6;
+        box-shadow: 0 2px 6px #9bdce1;
         border-radius: 3px;
-        background-color: #6777ef;
+        background-color: #60C8D0;
         border-bottom: none; }
         .tickets .ticket-items .ticket-item.active .ticket-title, .tickets .ticket-items .ticket-item.active .ticket-desc {
           color: #fff !important; }
@@ -1260,7 +1260,7 @@ tr:first-child > td > .fc-day-grid-event {
         display: flex;
         font-size: 11px;
         font-weight: 500;
-        color: #34395e;
+        color: #37333b;
         letter-spacing: .5px; }
         .tickets .ticket-items .ticket-item .ticket-desc .bullet {
           margin: 0 10px; }
@@ -1284,7 +1284,7 @@ tr:first-child > td > .fc-day-grid-event {
         letter-spacing: .3px;
         font-size: 12px;
         font-weight: 500;
-        color: #34395e; }
+        color: #37333b; }
         .tickets .ticket-content .ticket-header .ticket-detail .ticket-info .bullet {
           margin: 0 10px; }
   .tickets .ticket-divider {
@@ -1293,7 +1293,7 @@ tr:first-child > td > .fc-day-grid-event {
     display: inline-block;
     background-color: #f2f2f2; }
   .tickets .ticket-description {
-    color: #34395e;
+    color: #37333b;
     font-weight: 500;
     margin-top: 30px;
     line-height: 28px; }
@@ -1302,7 +1302,7 @@ tr:first-child > td > .fc-day-grid-event {
     .tickets .ticket-description .ticket-form {
       margin-top: 40px; }
       .tickets .ticket-description .ticket-form .note-editable {
-        color: #34395e;
+        color: #37333b;
         font-weight: 500; }
         .tickets .ticket-description .ticket-form .note-editable p {
           margin-bottom: 5px; }
@@ -1345,7 +1345,7 @@ tr:first-child > td > .fc-day-grid-event {
 .owl-theme .owl-dots {
   margin-top: 20px !important; }
   .owl-theme .owl-dots .owl-dot.active span {
-    background-color: #6777ef; }
+    background-color: #60C8D0; }
 
 /* 1.36 Activities */
 .activities {
@@ -1362,7 +1362,7 @@ tr:first-child > td > .fc-day-grid-event {
       top: 0;
       width: 2px;
       height: 100%;
-      background-color: #6777ef; }
+      background-color: #60C8D0; }
     .activities .activity:last-child:before {
       display: none; }
     .activities .activity .activity-icon {
@@ -1426,7 +1426,7 @@ tr:first-child > td > .fc-day-grid-event {
       margin-bottom: 4px; }
     .invoice .invoice-detail-item .invoice-detail-value {
       font-size: 18px;
-      color: #34395e;
+      color: #37333b;
       font-weight: 700; }
       .invoice .invoice-detail-item .invoice-detail-value.invoice-detail-value-lg {
         font-size: 24px; }
@@ -1445,7 +1445,7 @@ tr:first-child > td > .fc-day-grid-event {
   padding: 40px; }
   .empty-state .empty-state-icon {
     position: relative;
-    background-color: #6777ef;
+    background-color: #60C8D0;
     width: 80px;
     height: 80px;
     line-height: 100px;
@@ -1471,13 +1471,13 @@ tr:first-child > td > .fc-day-grid-event {
   margin-bottom: 30px;
   text-align: center; }
   .pricing.pricing-highlight .pricing-title {
-    background-color: #6777ef;
+    background-color: #60C8D0;
     color: #fff; }
   .pricing.pricing-highlight .pricing-cta a {
-    background-color: #6777ef;
+    background-color: #60C8D0;
     color: #fff; }
     .pricing.pricing-highlight .pricing-cta a:hover {
-      background-color: #394eea !important; }
+      background-color: #3ab9c3 !important; }
   .pricing .pricing-padding {
     padding: 40px; }
   .pricing .pricing-title {
@@ -1486,7 +1486,7 @@ tr:first-child > td > .fc-day-grid-event {
     text-transform: uppercase;
     letter-spacing: 2.5px;
     background-color: #f3f6f8;
-    color: #6777ef;
+    color: #60C8D0;
     border-radius: 0 0 3px 3px;
     display: inline-block;
     padding: 5px 15px; }
@@ -1507,7 +1507,7 @@ tr:first-child > td > .fc-day-grid-event {
         line-height: 20px;
         border-radius: 50%;
         text-align: center;
-        background-color: #47c363;
+        background-color: #63ed7a;
         color: #fff;
         margin-right: 10px; }
         .pricing .pricing-details .pricing-item .pricing-item-icon i {
@@ -1567,7 +1567,7 @@ tr:first-child > td > .fc-day-grid-event {
  * Thanks to Spectre.css
  */
 .avatar {
-  background: #6777ef;
+  background: #60C8D0;
   border-radius: 50%;
   color: #e3eaef;
   display: inline-block;
@@ -1627,7 +1627,7 @@ tr:first-child > td > .fc-day-grid-event {
     height: .5em;
     width: .5em; }
     .avatar .avatar-presence.online {
-      background: #47c363; }
+      background: #63ed7a; }
     .avatar .avatar-presence.busy {
       background: #fc544b; }
     .avatar .avatar-presence.away {
@@ -1675,17 +1675,17 @@ tr:first-child > td > .fc-day-grid-event {
       border-radius: 50%;
       background-color: #e3eaef; }
     .wizard-steps .wizard-step.wizard-step-active {
-      box-shadow: 0 2px 6px #acb5f6;
-      background-color: #6777ef;
+      box-shadow: 0 2px 6px #9bdce1;
+      background-color: #60C8D0;
       color: #fff; }
       .wizard-steps .wizard-step.wizard-step-active:before {
-        background-color: #6777ef;
+        background-color: #60C8D0;
         color: #fff; }
     .wizard-steps .wizard-step.wizard-step-success {
-      background-color: #47c363;
+      background-color: #63ed7a;
       color: #fff; }
       .wizard-steps .wizard-step.wizard-step-success:before {
-        background-color: #47c363;
+        background-color: #63ed7a;
         color: #fff; }
     .wizard-steps .wizard-step.wizard-step-danger {
       background-color: #fc544b;
