--- a/sources/scss/_variable.scss
+++ b/sources/scss/_variable.scss
@@ -1,28 +1,88 @@
+$base-color: #60C8D0;
+$base-color-hover: #60b5d0;
+
+$blue: #007bff;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$red: #fc544b;
+$orange: #ffa426;
+$yellow: #ffc107;
+$green: #63ed7a;
+$teal: #20c997;
+$cyan: #3abaf4;
+$white: #fff;
+$gray-100: #e3eaef;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #cdd3d8;
+$gray-500: #adb5bd;
+$gray-600: #868E96;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #191d21;
+
+$grays: ();
+$grays: map-merge(
+  (
+    "100": $gray-100,
+    "200": $gray-200,
+    "300": $gray-300,
+    "400": $gray-400,
+    "500": $gray-500,
+    "600": $gray-600,
+    "700": $gray-700,
+    "800": $gray-800,
+    "900": $gray-900
+  ),
+  $grays
+) !default;
+
+$primary: $base-color;
+$secondary: $gray-400;
+$success: $green;
+$info: $cyan;
+$warning: $orange;
+$danger: $red;
+$light: $gray-100;
+$grey: $gray-600;
+$dark: $black;
+$whitesmoke: #f7f9f9;
+$muted: #98a6ad;
+$body: #f4f6f9;
+$font: #6c757d;
+$fontdark: #37333b;
+$white: #ffffff;
+
+
+
+// Esse colors é usado pelo stisla
 $colors: (
-  primary:    		#6777ef,
-  secondary:      #cdd3d8,
-  success:        #47c363,
-  info:           #3abaf4,
-  warning:        #ffa426,
-  danger:         #fc544b,
-  light:          #e3eaef,
-  grey:  		      #868e96,
-  whitesmoke:     #f7f9f9,
-  dark:       		#191d21,
-  muted:          #98a6ad,
-  body:           #f4f6f9,
-  font:           #6c757d,
-  fontdark:       #34395e,
-  white:          #ffffff,
+  primary:    	  $primary,
+  secondary:      $secondary,
+  success:        $success,
+  info:           $info,
+  warning:        $warning,
+  danger:         $danger,
+  light:          $light,
+  grey:  		      $grey,
+  whitesmoke:     $whitesmoke,
+  dark:       		$dark,
+  muted:          $muted,
+  body:           $body,
+  font:           $font,
+  fontdark:       $fontdark,
+  white:          $white,
 
   // Form Control
   formcontrol_normal_background:    #fdfdff,
   formcontrol_normal_border:        #e4e6fc,
   formcontrol_focus_background:     #fefeff,
-  formcontrol_focus_border:         #95a0f4,
+  formcontrol_focus_border:         #60C8D0,
 
   // Utilities
-  section_title_line: #6777ef,
+  section_title_line: #60C8D0,
 );
 
 $font_family:   'Nunito', 'Segoe UI', arial;
@@ -36,4 +96,3 @@ $grid-breakpoints: (
   lg: 992px,
   xl: 1200px
 ) !default;
-
