changing success color and updates after compile scss

--- a/sources/scss/_variable.scss
+++ b/sources/scss/_variable.scss
@@ -8,8 +8,8 @@ $pink: #e83e8c;
 $red: #fc544b;
 $orange: #ffa426;
 $yellow: #ffc107;
-$green: #63ed7a;
-$teal: #20c997;
+$green: #20C997;
+$teal: #009688;
 $cyan: #3abaf4;
 $white: #fff;
 $gray-100: #e3eaef;
